lang/lc/tests/err_def.sys
system test()
{
	bool a;

	cond (a) (true -> true);
}
